--- a/cascade-1.html
+++ b/cascade-1.html
@@ -28,6 +28,13 @@
                 #b {
                     background-color: bisque
                 }
+                .i{background-color: hotpink;
+                    color: white
+
+                }
+                .sp {
+                    color: aquamarine
+                }
             </style>
 </head>
 <body>
@@ -47,5 +54,14 @@
         And this one too.
     </p>
     <p class="secret">And this one - none</p>
+    <div class="i">
+        <p>
+            Figuring out div and <span class="sp">span</span>
+        </p>
+
+        <p>
+            I think I get the idea.
+        </p>
+    </div>
 </body>
 </html>
